2002-07-27  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.8 "broccoli" is released.

2002-07-15  Jerry James  <james@xemacs.org>

	* make-docfile.c: Change whitespace and organization to reduce the
	size of the diff against FSF Emacs sources and synch to Emacs 21.2.
	Remove unused DO_REALLOC.
	Mark XEmacs changes and additions more clearly.
	Reintroduce previously deleted Emacs code inside #if 0 ... #endif.
	* make-docfile.c (next_extra_elc): Replace goto with do-while.
	* make-docfile.c (main): Put XEmacs-only args in one place.
	* make-docfile.c (write_c_args): Change buff to buf to match
	Emacs.  Replace pointer arithmetic with simpler array syntax.
	* make-docfile.c (scan_c_file): Note that DEFSIMPLE and DEFPRED no
	longer exist.  Correct the "name too long" test (off by one).
	Die with message if a DEFUN has no docstring instead of hanging.
	* make-docfile.c (scan_lisp_file): Introduce while loops used in
	Emacs sources to skip consecutive blank lines.

2002-07-14  Adrian Aichner  <adrian@xemacs.org>

	* etags.c: It's XEmacs, not Xemacs.

2002-07-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.7 "broccoflower" is released.

2002-05-29  Greg Steuck  <greg-xemacs-patches@nest.cx>

	* gnuclient.c: Makes it possible again to #undef
	INTERNET_DOMAIN_SOCKETS in lib-src/gnuserv.h and get a functional
	gnuserv which is only accessible through UNIX_DOMAIN_SOCKETS.

2002-05-28  Ben Wing  <ben@xemacs.org>

	* make-docfile.c (scan_c_file):
	* make-docfile.c (scan_lisp_file):
	Fix places where we forget to check for EOF.

2002-05-05  Ben Wing  <ben@xemacs.org>

	* i.c:
	* i.c (skip_executable_name):
	* i.c (main):
	Create an inheritable event and pass it on to XEmacs, so that ^C
	can be handled properly.  Intercept ^C and signal the event.
	"Stop Build" in VC++ now works.

2002-04-14  Ben Wing  <ben@xemacs.org>

	* make-docfile.c:
	* make-docfile.c (next_extra_elc):
	* make-docfile.c (again): Removed.
	* make-docfile.c (main):